[project]
name = "cognitivelayers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.11.0",
    "google-generativeai>=0.8.5",
    "mcp[cli]>=1.6.0",
]
